--- a/src/main/resources/templates/guestbook.html
+++ b/src/main/resources/templates/guestbook.html
@@ -11,7 +11,7 @@
 		<title th:text="#{guestbook.title}">Gästebuch</title>
 	</head>
 	<body>
-		<h1 class="text-center" th:text="#{guestbook.title}">Gästebuch</h1>
+		<h1 class="text-center" th:text="#{guestbook.title}">mein workshop</h1>
 	
 		<div class="checkbox text-center">
 			<input type="checkbox" id="use_ajax" />
@@ -52,6 +52,11 @@
 				<label for="name" th:text="#{guestbook.form.name}">Name</label><br /> 
 				<input class="form-control" type="text" th:field="*{name}" th:errorclass="is-invalid" required="required" />
 				<div th:if="${#fields.hasErrors('name')}" class="invalid-feedback" th:text="#{guestbook.form.name.required}">Please provide a name.</div> 
+			</div>
+			<div class="form-group">
+				<label for="bDate" th:text="#{guestbook.form.bDate}">Geburtstag</label><br /> 
+				<textarea th:field="*{bDate}" th:errorclass="is-invalid" class="form-control" required="required"></textarea>
+				<div th:if="${#fields.hasErrors('bDate')}" class="invalid-feedback" th:text="#{guestbook.form.bDate.required}">Please provide a text.</div>
 			</div>
 			<div class="form-group">
 				<label for="text" th:text="#{guestbook.form.text}">Text</label><br /> 
